# librex

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  Changelog.md  LICENSE  README.md  TODO.md
cmake/: Dependencies.cmake  FeatureTests.cmake
include/librex/: librex.hpp
test/: CMakeLists.txt  Test_Tests.hpp  assertion.hpp  main.cpp.in
